# AgenticSentryKit

./: .gitignore  .mkdocs.yml  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEMO_SCRIPT.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
demo_app/: __init__.py  main.py  scenarios.py
demo_app/static/: app.js  style.css
demo_app/templates/: index.html
docs/: adapters.md  changelog.md  checkers.md  core_api.md  examples.md  index.md  installation.md  security.md
examples/autogen_demo/: demo.py  requirements.txt
examples/common/: __init__.py  loader.py  sample_context.txt  sample_goal.yaml
examples/common/sample_html/: company_austin_job.html  company_dallas_job.html  pay_stub.html
examples/crewai_demo/: __init__.py  demo.py  requirements.txt
examples/langchain_demo/: demo.py  requirements.txt
examples/openai_agents_demo/: demo.py  requirements.txt
examples/strands_demo/: demo.py  requirements.txt
langchain_core/: __init__.py  callbacks.py
scripts/: run_demo_ui.sh
sentrykit/: __init__.py  engine.py  errors.py  models.py  policy.py
sentrykit/adapters/: __init__.py  autogen.py  crewai.py  langchain.py  openai_agents.py  strands.py
sentrykit/checkers/: __init__.py  drift.py  hallucination.py  jailbreak.py  leaks.py  poisoning.py  tool_firewall.py
sentrykit/claim_extractors/: __init__.py  autoclaims.py
sentrykit/report/: html.py
sentrykit/report/templates/: report.html.j2
sentrykit/utils/: logging.py  redact.py  urls.py
sentrykit/verify/: __init__.py  extract.py  web.py
tests/: test_adapters_langchain.py  test_adapters_runtime.py  test_checkers_drift.py  test_checkers_hallucination.py  test_checkers_leaks.py  test_checkers_poisoning.py  test_demo_scenarios.py  test_engine.py  test_examples_demo.py
tests/fixtures/contexts/: poisoned.txt
tests/fixtures/pages/: austin.html  dallas.html  listing_with_pay.html
