[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sentrykit"
version = "0.1.0"
description = "Framework-agnostic runtime for agent security and reliability"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "SentryKit Contributors" }]
requires-python = ">=3.11"
dependencies = []
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Topic :: Security",
]

[project.optional-dependencies]
openai_agents = ["openai>=1.0"]
langchain = ["langchain-core>=0.1.0"]
autogen = ["autogen-agentchat>=0.2.0"]
strands = ["aws-strands-agents>=0.1.0"]
crewai = ["crewai>=0.1.0"]
docs = [
    "mkdocs>=1.5",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.24",
]
demo = [
    "fastapi>=0.112",
    "uvicorn[standard]>=0.30",
]
dev = [
    "coverage[toml]>=7.4",
    "mypy>=1.8",
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.1.8",
    "types-PyYAML",
]

[project.urls]
Homepage = "https://example.com/sentrykit"
Documentation = "https://example.com/sentrykit/docs"

[tool.setuptools]
package-dir = {"" = "."}
packages = [
    "sentrykit",
    "sentrykit.utils",
    "sentrykit.verify",
    "sentrykit.checkers",
    "sentrykit.report",
    "sentrykit.adapters",
    "sentrykit.claim_extractors",
]
include-package-data = true

[tool.setuptools.package-data]
"sentrykit" = ["py.typed", "report/templates/*.j2"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["sentrykit"]
ignore_missing_imports = true
warn_unused_ignores = true
warn_return_any = true

[tool.ruff]
line-length = 100
src = ["sentrykit", "tests"]
select = ["E", "F", "I", "B", "Q", "UP", "TID"]
ignore = ["B905"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.ruff.lint.isort]
known-first-party = ["sentrykit"]
combine-as-imports = true

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
addopts = "-ra"

[tool.coverage.run]
branch = true
source = ["sentrykit"]

[tool.coverage.report]
omit = ["tests/*"]
show_missing = true
